--- a/_server/package.json
+++ b/_server/package.json
@@ -5,12 +5,16 @@
   "author": "Hokori",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "jwt-simple": "^0.5.6"
   }
 }
