Chore: 更改配置文件

--- a/_server/package.json
+++ b/_server/package.json
@@ -5,7 +5,8 @@
   "author": "Hokori",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www.js"
+    "start": "node ./bin/www.js",
+    "?server:build": "echo Error: \"编译.ts文件需要全局安装typescript, 请执行命令npm i -g typescript\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
-    "jwt-simple": "^0.5.6"
+    "jwt-simple": "^0.5.6",
+    "mysql2": "^2.1.0"
   }
 }
