--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd _server",
-    "server:install": "cd _server && npm install -f",
+    "server:install": "cd _server && npm i -f",
+    "server:build": "cd _server && tsc || npm run ?server:build",
+    "?server:build": "echo Error: \"编译.ts文件需要全局安装typescript, 请执行命令npm i -g typescript\"",
+    "server:install:ts": "cd_server && npm i -g typescript",
     "client": "cd _client && npm run dev",
-    "client:install": "cd _client && npm install -f"
+    "client:install": "cd _client && npm i -f"
   },
   "repository": {
     "type": "git",
