Fix: 路径别名修复 采用@zerollup/ts-transform-paths插件

--- a/_server/package.json
+++ b/_server/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www.js",
-    "build": "tsc",
-    "build:watch": "tsc -w"
+    "build": "ttsc",
+    "build:watch": "ttsc -w"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,8 +17,10 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "jwt-simple": "^0.5.6",
     "mysql2": "^2.1.0",
+    "ttypescript": "^1.5.10",
     "typescript": "^3.9.7"
   }
 }
