--- a/_server/package.json
+++ b/_server/package.json
@@ -5,7 +5,7 @@
   "author": "Hokori",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www.js",
+    "serve": "node ./bin/www.js",
     "build": "ttsc",
     "build:watch": "ttsc -w"
   },
