--- a/_server/tsconfig.json
+++ b/_server/tsconfig.json
@@ -42,30 +42,34 @@
 
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": ".",                          /* Base directory to resolve non-absolute module names. */
+    "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
     "paths": {
       "@vo": ["vo"],
       "@action": ["action"],
       "@service": ["service"],
       "@public": ["_public"],
-      "@config": ["../geekblog.config.js"],
+      "@routes": ["routes"],
+      "@database": ["database"],
+
       "@vo/*": ["vo/*"],
       "@action/*": ["action/*"],
       "@service/*": ["service/*"],
       "@public/*": ["_public/*"],
-      "@config/*": ["../geekblog.config.js/*"]
-      
-    },                                        /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+      "@routes/*": ["_routes/*"],
+      "@database/*": ["database/*"],
+
+      "@config": ["../geekblog.config.js"]
+    } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     "plugins": [
-        {
-            "transform": "@zerollup/ts-transform-paths",
-            "exclude": ["*"]
-        }
+      {
+        "transform": "@zerollup/ts-transform-paths",
+        "exclude": ["*"]
+      }
     ],
-    "rootDirs": []                            /* List of root folders whose combined content represents the structure of the project at runtime. */,
+    "rootDirs": [] /* List of root folders whose combined content represents the structure of the project at runtime. */,
     "typeRoots": [
       "../node_modules/@types"
-    ]                                      /* List of folders to include type definitions from. */,
+    ] /* List of folders to include type definitions from. */,
     // "types": [],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
@@ -86,6 +90,6 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "types": ["node"],
-    "watch": true
+    // "watch": true
   }
 }
