Chore: 删除冗余依赖项

--- a/_server/package.json
+++ b/_server/package.json
@@ -10,16 +10,13 @@
     "build:watch": "ttsc -w"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "jwt-simple": "^0.5.6",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "jwt-simple": "^0.5.6",
-    "mysql2": "^2.1.0",
     "ttypescript": "^1.5.10",
     "typescript": "^3.9.7"
   }
