--- a/_server/package.json
+++ b/_server/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "~4.16.1",
     "jwt-simple": "^0.5.6",
-    "mysql2": "^2.1.0"
+    "moment": "^2.29.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
