--- a/_server/package.json
+++ b/_server/package.json
@@ -18,7 +18,8 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.11.2",
+    "@types/validator": "^13.1.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "cross-env": "^7.0.2",
     "ttypescript": "^1.5.10",
