fix: npm run dev命令添加环境变量

--- a/_server/package.json
+++ b/_server/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "serve": "cross-env NODE_ENV=production node ./bin/www.js",
-    "dev": "node ./bin/www.js",
+    "dev": "cross-env NODE_ENV=development node ./bin/www.js",
     "build": "ttsc",
     "build:watch": "ttsc -w"
   },
