--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd _client && npm run dev",
+    "client": "cd _client",
+    "client:dev": "cd _client && npm run dev",
     "client:install": "cd _client && npm install -f",
     "client:build": "cd _client && npm run build",
     "client:serve": "cd _client && npm run build && npm run serve"
