chore: 修改npm指令npm run server:一键开发模式启动服务器

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd _server",
+    "server": "cd _server && npm i -f && npm run build && npm run dev",
     "server:install": "cd _server && npm i -f",
     "server:build": "cd _server && npm run build",
     "server:build:watch": "cd _server && npm run build:watch",
