--- a/_server/package.json
+++ b/_server/package.json
@@ -15,6 +15,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.0",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.12",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
