--- a/_server/tsconfig.json
+++ b/_server/tsconfig.json
@@ -50,6 +50,7 @@
       "@public": ["public"],
       "@routes": ["routes"],
       "@database": ["database"],
+      "@mailer": ["mailer"],
 
       "@vo/*": ["vo/*"],
       "@action/*": ["action/*"],
@@ -57,6 +58,7 @@
       "@public/*": ["public/*"],
       "@routes/*": ["routes/*"],
       "@database/*": ["database/*"],
+      "@mailer/*": ["mailer/*"],
 
       "@config": ["../geekblog.config.js"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
@@ -89,7 +91,7 @@
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "types": ["node"],
+    "types": ["node"]
     // "watch": true
   }
 }
