chore: .gitignore递归无视*.js

--- a/_server/.gitignore
+++ b/_server/.gitignore
@@ -1,15 +1,14 @@
 node_modules/
 
-action/*.js
-bin/*.js
-database/*.js
-middleware/*.js
-public/*.js
-routes/*.js
-service/*.js
-vo/*.js
-mailer/*.js
-mailer/template/*.js
+action/**/*.js
+bin/**/*.js
+database/**/*.js
+middleware/**/*.js
+public/**/*.js
+routes/**/*.js
+service/**/*.js
+vo/**/*.js
+mailer/**/*.js
 app.js
 
 # secure files
