--- a/_server/tsconfig.json
+++ b/_server/tsconfig.json
@@ -70,7 +70,7 @@
     ],
     "rootDirs": [] /* List of root folders whose combined content represents the structure of the project at runtime. */,
     "typeRoots": [
-      "../node_modules/@types"
+      "./node_modules/@types"
     ] /* List of folders to include type definitions from. */,
     // "types": [],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
@@ -90,8 +90,7 @@
 
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
-    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "types": ["node"]
+    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     // "watch": true
   }
 }
