--- a/_server/package.json
+++ b/_server/package.json
@@ -11,8 +11,10 @@
     "build:watch": "ttsc -w"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
+    "juice": "^7.0.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.0",
     "mysql2": "^2.1.0",
