--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "url": "https://github.com/Hokori23/geek_blog/issues"
   },
   "homepage": "https://github.com/Hokori23/geek_blog#readme",
-  "dependencies": {
-    "juice": "^7.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
