--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS || (node _server/deploy_scripts/pre-commit.js&&exit 8) || (node _client/deploy_scripts/pre-commit.js&&exit 8)"
     }
   },
   "browserslist": [
